# bt-board

./: .gitignore
docs/: libusb-1.0.19.7z
docs/hc-05/reflashing/: update_to_hc_05.rar
docs/hc-05/reflashing/content/: data.psq  data.psr  update.bat
firmware/test-coupling/: Makefile  Makefile.save
firmware/test-coupling/board/: board.h  board.mk
firmware/test-coupling/portld/: STM32F103C8T6.ld
firmware/test-coupling/src/: chconf.h  halconf.h  main.c  mcuconf.h
scheme/csr-spi-ftdi/: csr-spi-ftdi-cache.lib  csr-spi-ftdi.bak  csr-spi-ftdi.kicad_pcb  csr-spi-ftdi.kicad_pcb-bak  csr-spi-ftdi.net  csr-spi-ftdi.pro  csr-spi-ftdi.sch  fp-lib-table  mcp1703t-3302e.lib
scheme/csr-spi-ftdi/fabrication/: csr-spi-ftdi.csv
scheme/csr-spi-ftdi/fabrication/gerbers/: csr-spi-ftdi-F.Mask.gbr  csr-spi-ftdi.drl
scheme/csr-spi-ftdi/fabrication/oshpark/: csr-spi-ftdi-v1.GBL  csr-spi-ftdi-v1.GBS  csr-spi-ftdi-v1.GKO  csr-spi-ftdi-v1.GTL
scheme/footprints/my-lib.pretty/: CP2102.kicad_mod  CRYSTAL-SMD-5x3.kicad_mod  JST_B4B-PH-SM4-TB.kicad_mod  LQFP48.kicad_mod  a4985.kicad_mod  lb1930mc.kicad_mod  my-DPAK.kicad_mod  my-mini-usb-b.kicad_mod  my_inductance.kicad_mod  sot23.kicad_mod
scheme/libs/: crystal-4pin.lib  crystal-smd-5x3.mod  crystal.lib  do-214.mod  micro-usb-b.lib  micro-usb-b.mod  ncp3063.lib  sod323w.mod  stm32f103cbt6.lib  usb_a.lib
scheme/lpc-programmer/: lpc-programmer-cache.lib  lpc-programmer.bak  lpc-programmer.cmp  lpc-programmer.kicad_pcb  lpc-programmer.kicad_pcb-bak  lpc-programmer.net  lpc-programmer.pro  lpc-programmer.sch
scheme/main/: crystal-4pin.lib  main-cache.lib  main.bak  main.cmp  main.kicad_pcb  main.kicad_pcb-bak  main.net  main.pro  main.sch
scheme/usb-to-serial/: usb-to-serial-cache.lib  usb-to-serial.pro  usb-to-serial.sch
software/csr-ftdi/: CMakeLists.txt
software/csr-ftdi/3dparty/: CMakeLists.txt
software/csr-ftdi/3dparty/libftdi-0.20/: CMakeLists.txt
software/csr-ftdi/3dparty/libftdi-0.20/src/: ftdi.c  ftdi.h
software/csr-ftdi/lib/: CMakeLists.txt
software/csr-ftdi/lib/src/: basics.cpp  compat.c  compat.h  dllmain.h  logging.c  logging.h  spi.c  spifns.h  usbspi.dll.def
software/serial/: CMakeLists.txt
software/serial/app/: CMakeLists.txt
software/serial/app/src/: main.cpp  serial.cpp  serial.h  serial.ui
software/serial/qextserialport/: CMakeLists.txt
